--- a/assets/sass/theme/_screen.scss
+++ b/assets/sass/theme/_screen.scss
@@ -215,7 +215,7 @@ header {
 					padding: 0 0 0 150px;
 					width: 75%;
 					display: inline-block;
-					height: 100%;
+					height: 100vh;
 					background: white;
 					@include transform(translate(-150%,0));
 					@include transition(all 0.5s $authenticMotion);
@@ -334,7 +334,6 @@ header {
 				padding: 0;
 				width: 50px;
 				vertical-align: middle;
-				@include transform(translateY(-50%));
 				a {
 					text-decoration: none;
 					display: block;
